csye6225-fall2017-assignment 5+6/infrastructure/aws/cloudformation/createStack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
    "Resources": {

        "EC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
				"KeyName" : {"Ref": "keyName"},
                "ImageId": {"Ref": "imageId"},
                "InstanceType": {"Ref": "InstType"},
                "SecurityGroupIds": [
                    {
                        "Fn::GetAtt": [
                            "csye6225webapp",
                            "GroupId"
                        ]
                    }
                ],
				"DisableApiTermination": "TRUE",
				"BlockDeviceMappings" : [
                {
                "DeviceName" : "/dev/sda1",
                "Ebs" : { 
                          "DeleteOnTermination": true,
                          "SnapshotId": {"Ref": "snapshotId"},
                          "VolumeSize": {"Ref": "volumeSize"},
                          "VolumeType": {"Ref": "volumeType"}
                        } 
                }
                ]
            }
        },

	"ResourceRecordSet" : {
	"Type" : "AWS::Route53::RecordSet",
	"Properties" : {
        "HostedZoneId" : {"Ref": "hostedZoneId"},
        "Comment" : "DNS name for my instance.",
        "Name" : {"Ref": "dnsName"},
        "Type" : {"Ref": "recordSetType"},
        "TTL" : {"Ref": "recordSetTTl"},
        "ResourceRecords" : [ { "Fn::GetAtt" : [ "EC2Instance", "PublicIp" ] } ]
		}
		},

	"Subnet1" : {
         "Type" : "AWS::EC2::Subnet",
         "Properties" : {
            "VpcId" : {"Ref": "vpcId"},
            "CidrBlock" : "10.0.0.0/24",
            "AvailabilityZone" : "us-east-1a",
         }
      },

	"Subnet2" : {
         "Type" : "AWS::EC2::Subnet",
         "Properties" : {
            "VpcId" : {"Ref": "vpcId"},
            "CidrBlock" : "10.0.0.0/24",
            "AvailabilityZone" : "us-east-1b",
         }
      },
	
	"DBSubnetGroup" : {
         "Type" : "AWS::RDS::DBSubnetGroup",
         "Properties" : {
            "DBSubnetGroupDescription" : "description",
            "SubnetIds" : [{
                        "Fn::GetAtt": [
                            "Subnet1",
                            "subnetId"
                        ]
                    }, {
                        "Fn::GetAtt": [
                            "Subnet2",
                            "subnetId"
                        ]
                    }  ],
            
         }
      },

        "csye6225webapp": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
				
                "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22, HTTPS access via port 443",
                "VpcId": {"Ref": "vpcId"},
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
					{
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            } 
        } ,

	"csye6225rds": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
				
                "GroupDescription": "Enable HTTP access via port 3306",
                "VpcId": {"Ref": "vpcId"},
                
            } 
        } ,

	"csye6225rdsIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupName": {
                    "Ref": "csye6225webapp"
                },
                "IpProtocol": "tcp",
                "FromPort": "3306",
                "ToPort": "3306",
                "SourceSecurityGroupName": {
                    "Ref": "csye6225webapp"
                }
            }
        },

	"DynamoDBTable" :{
	"Type": "AWS::DynamoDB::Table",
	"Properties" : {
	"AttributeDefinitions" : [
          {
            "AttributeName" : "userId",
            "AttributeType" : "S"   
          }
        
        ],
	"KeySchema" : [
          {
            "AttributeName" : "userId",
            "KeyType" : "HASH"
          }],
	 "ProvisionedThroughput" : {
            "ReadCapacityUnits" : "5",
            "WriteCapacityUnits" : "5"
          },
	"TableName" : "csye6225"
}
},
	
	"S3Bucket" : {
	 "Type": "AWS::S3::Bucket",
	"Properties" : {
	"BucketName" : "csye6225-fall2017-patilsur.me.csye6225.com"}
	},


	"DBInstance" : {
 	 "Type" : "AWS::RDS::DBInstance",
   	"Properties" : {
	"AllocatedStorage" :"100",
      	"DBName" : "csye6225",
      	"DBInstanceClass" : "db.t2.medium",
	"DBInstanceIdentifier" : "csye6225-fall2017",
	"DBSubnetGroupName": {"Ref": "DBSubnetGroup"},
	      	"Engine" : "MySQL",
      	"EngineVersion" : "5.6.35",
      	"MasterUsername" : "csye6225master",
      	"MasterUserPassword" : "csye6225password",
      	"MultiAZ" : "FALSE",
	"PubliclyAccessible" : "FALSE"
   
		}
    	}
	}
}
